# dreambooth

./: CLAUDE.md  PRD.md  dreambooth_research_plan.md  generate_figures.py  generate_figures_v2.py  generate_multi_subject_figure.py  progress.txt  pyproject.toml  review.txt  run_ablation.py  run_additional_experiments.py  run_all_experiments.sh  run_ccd_experiment.py  run_experiments.py  run_multisubject_experiment.py  run_multisubject_noccd.py  run_real_training.py  run_single_experiment.py
dreambooth/hybrid_auto/: dreambooth.md  dreambooth_content_list.json  dreambooth_content_list_v2.json  dreambooth_middle.json  dreambooth_model.json
modularbooth/: __init__.py
modularbooth/configs/: __init__.py  default.yaml  flux.yaml  sd3.yaml
modularbooth/data/: __init__.py  augmentation.py  benchmark.py  captioning.py  dataset.py
modularbooth/evaluation/: __init__.py  clip_score.py  dino_score.py  diversity.py  entanglement.py  identity_isolation.py  run_evaluation.py  vqa_alignment.py
modularbooth/inference/: __init__.py  layout.py  multi_subject.py  single_subject.py
modularbooth/losses/: __init__.py  ccd_loss.py  combined.py  prior_preservation.py
modularbooth/models/: __init__.py  attention_mask.py  blockwise_lora.py  knowledge_probe.py  lora_merge.py
modularbooth/scripts/: evaluate.py  generate.py  probe_blocks.py  run_ablation.py  train.py
modularbooth/tests/: test_attention_mask.py  test_blockwise_lora.py  test_ccd_loss.py  test_dataset.py  test_e2e_gpu.py  (+3 more)
paper/: modularbooth.aux  modularbooth.bbl  modularbooth.blg  modularbooth.tex  references.bib
(+40 files in other folders)
